[package]
name = "ushlepok"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "form"] }
axum-template = { version = "1.0.0", features = ["handlebars"] }
axum_typed_multipart = "0.10.2"
garde = "0.16.3"
handlebars = "4.5.0"
image = "0.24.7"
mime_guess = "2.0.4"
rust-embed = "8.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
